welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: Missing closing brace `}' assumed here
droite(); droite()
^DwarfCode:9: error: ';' expected but 'else' found.
  else {
  ^