welcome.lessons.welcome.summative.Moria.scala.code
droite(); droite()
while(!estFaceMur()) {
  while(!estSurBiscuit() && !estFaceMur()) {
    avance()
  }
  if(estSurBiscuit()) {
    prendBiscuit()
    droite(); droite()
  else {
    droite()
    avance()
    gauche()
    avance()
  }
  while(!estSurBiscuit()) {
    avance()
  }
  recule()
  poseBiscuit()
  droite(); droite()
  
}